<resources>
    <string name="app_name">Whac-A-Mole</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_welcome_fragment">Play</string>
    <string name="tv_welcome_record">Record: %s</string>
    <string name="tv_score">Score: %s</string>
    <string name="tv_rules_of_the_game">Moles are lost, help them get home. Collect them as much as possible by clicking on the mole, but know that they are very fast!</string>
    <string name="button_play">play again</string>
    <string name="button_menu">menu</string>
    <string name="tv_result_score">Collected moles: %s</string>
    <string name="tv_result_record">Record: %s</string>
</resources>