<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".presentation.WelcomeFragment">

        <ImageView
            android:id="@+id/iv_welcomeFragment"
            android:layout_width="match_parent"
            android:layout_height="730dp"
            android:scaleType="fitXY"
            android:src="@drawable/mole"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iv_welcomeFragment"
            app:layout_constraintStart_toStartOf="@+id/iv_welcomeFragment"
            android:backgroundTint="@color/buttonPlay"
            android:text="@string/button_welcome_fragment"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/yellow"
            android:layout_margin="7dp"
            />

        <TextView
            android:id="@+id/tv_welcome_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/tv_welcome_record"
            android:textSize="35sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tv_welcome_record" />

        <TextView
            android:id="@+id/tv_rules_of_the_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome_record"
            android:text="@string/tv_rules_of_the_game"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>